--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!-- Materialize - Compiled and minified CSS-->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
   <!-- Font Awesome Icon - CSS-->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Zixi Chen | Personal Website</title>
 
 </head>
@@ -25,7 +25,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/70243423.jfif" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="./assets/img/70243423.jfif" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -181,7 +181,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://www.grantthornton.fr/fr/" target="_blank"><img alt="GT logo"
-                    src="/assets/img/grand-thornton.jpg" class="responsive-img center-block" /></a>
+                    src="./assets/img/grand-thornton.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -214,7 +214,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://gsa.unimelb.edu.au/" target="_blank"><img alt="GSA logo"
-                    src="/assets/img/gsa-logo.svg" class="responsive-img center-block" /></a>
+                    src="./assets/img/gsa-logo.svg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -245,7 +245,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://practera.com/" target="_blank"><img alt="Practera logo"
-                    src="/assets/img/practera.gif" class="responsive-img center-block" /></a>
+                    src="./assets/img/practera.gif" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -284,7 +284,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/Money 03.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="music streaming app" src="./assets/img/Money 03.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">stockPrice Mobile App<i
@@ -317,7 +317,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/assets/img/city.jpg" style="height: 100%; width: 100%" class="activator" />
+                <img alt="quiz app" src="./assets/img/city.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">How 'healthy' is your area?<i
@@ -363,22 +363,22 @@
             <h4 class="brown-text light">Languages and Databases</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+                <img alt="" src="./assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
                <div class="col s4 m2">
-                <img alt="" src="/assets/img/javascript.png" class="responsive-img" />JavaScript
+                <img alt="" src="./assets/img/javascript.png" class="responsive-img" />JavaScript
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="./assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="./assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                <img alt="" src="./assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/JAVA.jpg" class="responsive-img" />Java
+                <img alt="" src="./assets/img/JAVA.jpg" class="responsive-img" />Java
               </div>
             </div>
           </div>
@@ -389,16 +389,16 @@
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/react.svg" class="responsive-img" />ReactJS
+                <img alt="" src="./assets/img/react.svg" class="responsive-img" />ReactJS
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="./assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/expressjs.svg" class="responsive-img" />Express.js
+                <img alt="" src="./assets/img/expressjs.svg" class="responsive-img" />Express.js
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/materialUI.png" class="responsive-img" />MaterialUI
+                <img alt="" src="./assets/img/materialUI.png" class="responsive-img" />MaterialUI
               </div>
             </div>
           </div>
@@ -412,10 +412,10 @@
 
 
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/tableau.svg" class="responsive-img" />Tableau
+                <img alt="" src="./assets/img/tableau.svg" class="responsive-img" />Tableau
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/android-studio.webp" class="responsive-img" />Android Studio
+                <img alt="" src="./assets/img/android-studio.webp" class="responsive-img" />Android Studio
               </div>
             </div>
           </div>
@@ -521,7 +521,7 @@
   </main>
 
   <!-- typed.js -->
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
+  <script src="./assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
       strings: ["Developer","Business Graduate", "Quick Learner"],
