--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon/favicon-96x96.png">
   <title>My Portfolio</title>
 
 </head>
