--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/zixic83/stockPrice"
+                  <a aria-label="Visit the GitHub repo for the project" href="https://github.com/zixic83/stockPrice"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -338,7 +338,7 @@
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/zixic83/How-healthy-are-the-people-in-your-area-"
+                  <a aria-label="Visit the GitHub repo for the project" href="https://github.com/zixic83/How-healthy-are-the-people-in-your-area-"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -347,6 +347,38 @@
             </div>
           </div>
 
+                    <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div id="myTwitter" class="card-image waves-effect waves-block waves-light">
+                <img alt="music streaming app" src="./assets/img/Social Media.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">myTwitter - Twitter clone<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  A private local Twitter clone used as my personal electronic diary
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> ReactJS,ExpressJS,MongoDB,Tailwind CSS</li>
+                  <li>Post,update,delete & attach media to a tweet</li>
+
+
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit the GitHub repo for the project" href="https://github.com/zixic83/my-twitter"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
         
 
           <!-- ************* -->
@@ -396,10 +428,16 @@
                 <img alt="" src="./assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
               </div>
               <div class="col s4 m2">
-                <img alt="" src="./assets/img/expressjs.svg" class="responsive-img" />Express.js
+                <img alt="" src="./assets/img/expressJS.png" class="responsive-img" />Express.js
               </div>
               <div class="col s4 m2">
                 <img alt="" src="./assets/img/materialUI.png" class="responsive-img" />MaterialUI
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="./assets/img/mongoDB.png" class="responsive-img" />MongoDB
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="./assets/img/tailwind.png" class="responsive-img" />Tailwind
               </div>
             </div>
           </div>
@@ -414,9 +452,6 @@
 
               <div class="col s4 m2">
                 <img alt="" src="./assets/img/tableau.svg" class="responsive-img" />Tableau
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="./assets/img/android-studio.webp" class="responsive-img" />Android Studio
               </div>
             </div>
           </div>
