--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     src="./assets/img/grand-thornton.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
-              <div class="col s12 m10">
+           <!--   <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.grantthornton.fr/fr/" target="_blank"
                       class="teal-text hoverline">Grant-Thornton Paris</a></span>
