--- a/index.html
+++ b/index.html
@@ -206,6 +206,43 @@
         </div>
   -->
 
+          <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://i-build.com.au/" target="_blank"><img alt="GSA logo"
+                    src="./assets/img/ibuild-Logo.jpg" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://i-build.com.au/" target="_blank"
+                      class="teal-text hoverline">iBuild Building Solutions</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Junior Developer (Internship)</div>
+            <ul>
+              <li>
+                Conducted and presented research on new technologies independently 
+              </li>
+              <li>
+                Assisted in the migration of WordPress websites by utilising technical skills
+              </li>
+              <li>
+                Applied organisational and time management skills to accomplish assigned tasks on time
+              </li>
+              <li>
+                Refined communication skills and conflict management skills as a team member
+              </li>
+              
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>June - July 2023</span>
+          </div>
+        </div>
+
         <div class="card">
           <div class="card-content">
             <div class="row">
