--- a/index.html
+++ b/index.html
@@ -486,6 +486,9 @@
               <div class="col s4 m2">
                 <img alt="" src="./assets/img/tableau.svg" class="responsive-img" />Tableau
               </div>
+              <div class="col s4 m2">
+                <img alt="" src="./assets/img/WordPress-logo.png" class="responsive-img" />WordPress
+              </div>
             </div>
           </div>
         </div>
