--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <h3 class="page-title white-text teal">About</h3>
       <div class="container flow-text">     
         <p>
-          Information Technology student with a commerce background striving to combine business soft skills with growing technical skills to deliver mutually beneficial outcomes. Nurtured cultural sensitivity through interest and experience in diverse cultures, as well as more than 5 years of language study.
+            IT graduate with a commerce background striving to combine business soft skills with growing technical skills to deliver mutually beneficial outcomes. Nurtured cultural sensitivity through interest and experience in diverse cultures, as well as more than 5 years of language study.
         </p>
           
 
@@ -432,7 +432,7 @@
                 <img alt="" src="./assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
                <div class="col s4 m2">
-                <img alt="" src="./assets/img/javascript.png" class="responsive-img" />JavaScript
+                <img alt="" src="./assets/img/js-resized.png" class="responsive-img" />JavaScript
               </div>
               <div class="col s4 m2">
                 <img alt="" src="./assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
@@ -455,7 +455,7 @@
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="./assets/img/react.svg" class="responsive-img" />ReactJS
+                <img alt="" src="./assets/img/react-500.png" class="responsive-img" />ReactJS
               </div>
               <div class="col s4 m2">
                 <img alt="" src="./assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
@@ -487,7 +487,7 @@
                 <img alt="" src="./assets/img/tableau.svg" class="responsive-img" />Tableau
               </div>
               <div class="col s4 m2">
-                <img alt="" src="./assets/img/WordPress-logo.png" class="responsive-img" />WordPress
+                <img  alt="" src="./assets/img/WordPress-logo.png" class="responsive-img" /><span style="font-size: 17.5px;">WordPress</span>
               </div>
             </div>
           </div>
