--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Zixi Chen</a><span class="black-text">IT Student</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Zixi Chen</a><span class="black-text">IT Graduate</span>
     </div>
   </nav>
 
@@ -133,7 +133,7 @@
               <h2>Hi, I'm <span class="teal">Zixi Chen.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#121013"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Motivated developer with diversified skill sets looking to gain more practical experience</h5>
+              <h5>Motivated developer with diversified skill sets</h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/zixi-alice-chen/" target="_blank">
