--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> ReactJS,ExpressJS,NodeJS,MongoDB</li>
-                  <li>Track and manage stock holding</li>
+                  <li>Track and manage stock holdings</li>
 
 
                 </ul>
@@ -389,7 +389,7 @@
                 <span class="card-title activator teal-text hoverline">myTwitter - Twitter clone<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A private local Twitter clone used as my personal electronic diary
+                  A private local Twitter clone used as my personal journal
                 </p>
               </div>
               <div class="card-reveal">
@@ -400,6 +400,7 @@
                 <ul>
                   <li><b>Tools:</b> ReactJS,ExpressJS,MongoDB,Tailwind CSS</li>
                   <li>Post,update,delete & attach media to a tweet</li>
+                  <li>Display URLs in their page titles</li>
 
 
                 </ul>
